--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Вторметпром</title>
+        <title>Контакты</title>
         
         
         <link rel= https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css>
